// Copyright 2024 Flant JSC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "pb/dhctl";

package dhctl;

import "check.proto";
import "bootstrap.proto";
import "destroy.proto";
import "abort.proto";
import "converge.proto";
import "commander_attach.proto";
import "commander_detach.proto";
import "validation.proto";

service DHCTL {
  rpc Check (stream CheckRequest) returns (stream CheckResponse) {}
  rpc Bootstrap (stream BootstrapRequest) returns (stream BootstrapResponse) {}
  rpc Destroy (stream DestroyRequest) returns (stream DestroyResponse) {}
  rpc Abort (stream AbortRequest) returns (stream AbortResponse) {}
  rpc Converge (stream ConvergeRequest) returns (stream ConvergeResponse) {}
  rpc CommanderAttach (stream CommanderAttachRequest) returns (stream CommanderAttachResponse) {}
  rpc CommanderDetach (stream CommanderDetachRequest) returns (stream CommanderDetachResponse) {}
}

service Validation {
  rpc ValidateResources (ValidateResourcesRequest) returns (ValidateResourcesResponse) {}
  rpc ValidateInitConfig (ValidateInitConfigRequest) returns (ValidateInitConfigResponse) {}
  rpc ValidateClusterConfig (ValidateClusterConfigRequest) returns (ValidateClusterConfigResponse) {}
  rpc ValidateStaticClusterConfig (ValidateStaticClusterConfigRequest) returns (ValidateStaticClusterConfigResponse) {}
  rpc ValidateProviderSpecificClusterConfig (ValidateProviderSpecificClusterConfigRequest) returns (ValidateProviderSpecificClusterConfigResponse) {}
  rpc ValidateChanges (ValidateChangesRequest) returns (ValidateChangesResponse) {}
  rpc ParseConnectionConfig (ParseConnectionConfigRequest) returns (ParseConnectionConfigResponse) {}
}
